# hello-bazel

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
hello-go/: BUILD.bazel  go.mod  go.sum  main.go
hello-go/internal/handler/: BUILD.bazel  hello.go  hello_test.go
hello-py/: BUILD.bazel  main.py
