module(
    name = "hello-bazel",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//hello-go:nogo")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//hello-go:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//hello-go:go.mod")
use_repo(
    go_deps,
    "com_github_go_fuego_fuego",
    "org_golang_x_tools",
)
